--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -36,7 +36,7 @@ html, body, #root {
 }
 
 input {
-    padding: 6px;
+    padding: 12px;
     border-radius: 15px;
     border: 1px solid gray;
     font-size: inherit;
